# zero2prod

./: .gitignore  Cargo.toml  Dockerfile
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20220412074543_create_subscription_tokens_table.sql  20220530004812_create_users_table.sql  20220607111020_seed_user.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  utils.rs
src/authentication/: mod.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
