[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
once_cell = "1.10.0"
claim = "0.5.0"
fake = "~2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1.17.0", features = ["macros", "rt"] }
wiremock = "0.5.12"
serde_json = "1.0.79"
serde_urlencoded = "0.7.1"
linkify = "0.8.0"

[dependencies]
actix-web = "4.0.1"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.136", features = ["derive"] }
serde-aux = "3.0.1"
sqlx = { version = "0.5.11", features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
config = { version = "0.12.0" }
uuid = { version = "0.8.2", features = ["v4"] }
chrono = { version = "0.4.19" }
tracing = { version = "0.1.32", features = ["log"] }
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.9", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-actix-web = "0.5.1"
secrecy = { version = "0.8.0", features = ["serde"] }
unicode-segmentation = "1.9.0"
validator = "0.14.0"
reqwest = { version = "0.11.10", default-features = false, features = ["json", "rustls-tls"] }
rand = { version = "0.8.5", features = ["std_rng"] }