[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
once_cell = "1.10.0"
claim = "0.5.0"
fake = "~2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1.17.0", features = ["macros", "rt"] }
wiremock = "0.5.12"
serde_urlencoded = "0.7.1"
linkify = "0.8.0"

[dependencies]
actix-web = "4.0.1"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.136", features = ["derive"] }
serde-aux = "3.0.1"
serde_json = "1.0.81"
sqlx = { version = "0.5.11", features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
config = { version = "0.12.0" }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
chrono = { version = "0.4.19" }
tracing = { version = "0.1.32", features = ["log"] }
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.9", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-actix-web = "0.5.1"
secrecy = { version = "0.8.0", features = ["serde"] }
unicode-segmentation = "1.9.0"
validator = "0.14.0"
reqwest = { version = "0.11.10", default-features = false, features = ["json", "rustls-tls", "cookies"] }
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.30"
anyhow = "1.0.56"
base64 = "0.13.0"
argon2 = { version = "0.4.0", features = ["std"] }
urlencoding = "2.1.0"
htmlescape = "0.3.1"
hmac = { version = "0.12.1", features = ["std"] }
sha2 = "0.10.2"
hex = "0.4.3"
time = "0.3.9"
actix-web-flash-messages = { version = "0.3.2", features = ["cookies"] }
actix-session = { git = "https://github.com/actix/actix-extras", branch="master", features = ["redis-rs-tls-session"] }
